utilize local development server + add User model and controller

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "AdventureLoggerBackendContext": "Server=localhost;user=root;password=adventure;database=adventure_logger;"
+  }
 }
